# weather-ai

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
static/: scripts.js  styles.css
templates/: index.html
weather_ai/: __init__.py
